@@ -21,6 +21,11 @@ FVWM 2.2.4, a stable bugfix release, is now available for download!
 <hr>
 </blockquote>
 -->
+<blockquote>
+<h3><font color="yellow">NEWS FLASH!</font></h3>
+<p>
+FVWM 2.3.28, a stable beta release, is now available for download!
+<hr>
 
 <p>
 FVWM is an extremely powerful ICCCM-compliant multiple virtual desktop window
@@ -29,7 +34,7 @@ manager for the X Window system. <a href="download.html">Get</a> your copy.
 <blockquote>
 <table border=0 cellpadding=0 cellspacing=0>
   <tr><td>Latest Stable Release: &nbsp;<td><b>2.2.4</b></tr>
-  <tr><td>Latest Beta Release:   &nbsp;<td><b>2.3.27</b></tr>
+  <tr><td>Latest Beta Release:   &nbsp;<td><b>2.3.28</b></tr>
 </table>
 </blockquote>
 
@@ -63,6 +68,6 @@ manager for the X Window system. <a href="download.html">Get</a> your copy.
 
 <hr>
 Created: Jan 31, 1996 *
-Last modified: Jan 4, 2000
+Last modified: Jan 25, 2001
 </body>
 </html>
