@@ -1,3 +1,7 @@
+2001-01-25  Dan Espen  <dane@mk.telcordia.com>
+
+	* download.html, index.html: News Flash, download 2.3.28.
+
 2001-01-20  Dan Espen  <dane@mk.telcordia.com>
 
 	* vector-buttons/DecorDemo1-4.fvwmrc/gif: Hide the handles.
